# eventsourcingdb-client-rust

./: Cargo.toml  LICENSE.md  Makefile  README.md  clippy.toml  openapi
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug.md
.github/workflows/: qa.yml  release.yml
examples/: event_types.rs  get_started.rs  listing_subjects.rs  observing_events.rs  ping.rs  reading_events.rs  registering_event_schema.rs  running_eventql.rs  verify_api_token.rs  write_events.rs
src/: client.rs  container.rs  error.rs  event.rs  lib.rs  polars.rs
src/client/: client_request.rs  precondition.rs  request_options.rs  validate_server_header.rs
src/client/client_request/: list_event_types.rs  list_subjects.rs  observe_events.rs  ping.rs  read_event_type.rs  read_events.rs  register_event_schema.rs  run_eventql_query.rs  verify_api_token.rs  write_events.rs
src/event/: event.rs  event_candidate.rs  event_types.rs  trace_info.rs
src/event/event_types/: event.rs  event_candidate.rs  management_event.rs
tests/: essentials.rs  metadata_and_discovery.rs  observe_events.rs  polars.rs  read_events.rs  run_eventql_query.rs  testcontainer.rs  write_events.rs
tests/utils/: mod.rs
