[package]
name = "eventsourcingdb"
version = "1.1.0"
edition = "2024"
description = "A client library for the EventsourcingDB by the native web."
repository = "https://github.com/thenativeweb/eventsourcingdb-client-rust"
license = "MIT"
keywords = [
  "esdb",
  "events",
  "event-sourcing",
  "event-store",
  "cqrs",
]
categories = ["database"]

[features]
default = []
cloudevents = ["dep:cloudevents-sdk"]
polars = ["dep:polars"]
testcontainer = ["dep:testcontainers", "dep:rand", "ed25519-dalek/rand_core"]

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
cloudevents-sdk = { version = "0.9.0", features = ["reqwest"], optional = true }
futures = "0.3.31"
futures-util = "0.3.31"
jsonschema = "0.33.0"
reqwest = { version = "0.12.28", features = ["json", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145", features = ["raw_value"] }
testcontainers = { version = "0.26.0", features = [
  "http_wait",
], optional = true }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["io-util"] }
tokio-util = { version = "0.7.17", features = ["io"] }
tokio-stream = { version = "0.1.17", features = ["io-util"] }
typed-builder = "0.23.2"
url = "2.5.4"
sha2 = "0.10.9"
hex = "0.4.3"
ed25519-dalek = { version = "2.2.0", features = ["rand_core", "pkcs8", "pem"] }
rand = { version = "0.8", optional = true }
polars = { version = "0.44", default-features = false, features = ["lazy", "dtype-datetime"], optional = true }

[dev-dependencies]
testcontainers = { version = "0.26.0", features = ["http_wait"] }
tokio = { version = "1.48.0", features = ["full"] }
tokio-test = "0.4.4"

# This is metadata required for working docs on docs.rs
[package.metadata.docs.rs]
features = ["testcontainer"]
