[package]
name = "eventsourcingdb"
version = "1.1.0"
edition = "2024"
description = "A client library for the EventsourcingDB by the native web."
repository = "https://github.com/thenativeweb/eventsourcingdb-client-rust"
license = "MIT"
keywords = [
  "esdb",
  "events",
  "event-sourcing",
  "event-store",
  "cqrs",
]
categories = ["database"]

[features]
default = []
cloudevents = ["dep:cloudevents-sdk"]
polars = ["dep:polars"]
testcontainer = ["dep:testcontainers", "dep:rand", "ed25519-dalek/rand_core"]

[dependencies]
chrono = { version = "0.4.43", features = ["serde"] }
cloudevents-sdk = { version = "0.9.0", features = ["reqwest"], optional = true }
futures = "0.3.31"
futures-util = "0.3.31"
jsonschema = "0.33.0"
reqwest = { version = "0.13.1", features = ["json", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149", features = ["raw_value"] }
testcontainers = { version = "0.27.0", features = [
  "http_wait",
], optional = true }
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["io-util"] }
tokio-util = { version = "0.7.18", features = ["io"] }
tokio-stream = { version = "0.1.18", features = ["io-util"] }
typed-builder = "0.23.2"
url = "2.5.4"
sha2 = "0.10.9"
hex = "0.4.3"
ed25519-dalek = { version = "2.2.0", features = ["rand_core", "pkcs8", "pem"] }
rand = { version = "0.8", optional = true }
polars = { version = "0.44", default-features = false, features = ["lazy", "dtype-datetime"], optional = true }

[dev-dependencies]
testcontainers = { version = "0.27.0", features = ["http_wait"] }
tokio = { version = "1.49.0", features = ["full"] }
tokio-test = "0.4.5"

# This is metadata required for working docs on docs.rs
[package.metadata.docs.rs]
features = ["testcontainer"]
